--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-image: linear-gradient(to right, #fd297a, #9424f0);
+  min-height: 800px;
+  max-width: 1500px;
+}
